--- a/languages/TH.json
+++ b/languages/TH.json
@@ -25,7 +25,30 @@
             }
         },
         "error": {
-            "selecter_isnt_author": "`\\help` ใช้ของตัวเองสิ"
+            "selecter_isnt_author": "`/help` ใช้ของตัวเองสิ"
         }
+    },
+    "MusicCommands": {
+        "errors": {
+            "PlayerNotFound": "เปิดเพลงยางง",
+            "NotfoundTrack": "หาเพลงไม่เจอ",
+            "TracksInQueueNotFound": "ว่างคิวนะไม่มีเพลงเล่นต่อ",
+            "NotFoundTrackPlaying": "ไม่มีเพลงเล่นนะ",
+            "UserWasNotJoin": "เข้าห้องยัง👊!",
+            "QueueLessThanTwo": "เพลงในคิวเองอะน้อยกว่า2"
+        },
+        "playTrack": "💿 เพิ่มtrackแล้ว",
+        "playPlaylist": "💽 เพิ่มplaylistแล้ว",
+        "queue": "`%d`เพลงในคิว",
+        "skip": "ข้ามให้ละ",
+        "stop": "จงหยุด!",
+        "shuffle": "สุ่มแล้ว",
+        "pause": "ตอนนี้ `%s`",
+        "clearQueue": "clearคิวแล้ว",
+        "loop": "loop: `%s`",
+        "seek": "กอไป `%s`",
+        "swap": "สลับ `%s` กับ `%s`",
+        "remove": "ลบ `%s` จากคิวแล้ว",
+        "autoPlay": "autoplay: `%s`"
     }
 }
