optimized ให้แดกram

--- a/languages/TH.json
+++ b/languages/TH.json
@@ -35,7 +35,8 @@
             "TracksInQueueNotFound": "ว่างคิวนะไม่มีเพลงเล่นต่อ",
             "NotFoundTrackPlaying": "ไม่มีเพลงเล่นนะ",
             "UserWasNotJoin": "เข้าห้องยัง👊!",
-            "QueueLessThanTwo": "เพลงในคิวเองอะน้อยกว่า2"
+            "QueueLessThanTwo": "เพลงในคิวเองอะน้อยกว่า2",
+            "UserNotInTheRoom": "Joinห้องเดียวกันดิว่ะ"
         },
         "playTrack": "💿 เพิ่มtrackแล้ว",
         "playPlaylist": "💽 เพิ่มplaylistแล้ว",
